# pynode

./: .dockerignore  .gitignore  CUSTOM_NODES.md  DOCKER.md  Dockerfile  Dockerfile.cpu  INSTALL.md  LICENSE  MANIFEST.in  README.md  app.py  base_node.py  docker-compose.yml  docker-entrypoint.sh  example.py  example_switch.py  install_nodes.bat  install_nodes.sh  main.py  plan-pynodeRepoReview.prompt.md  plan-pynodeReview-2026-07-18.prompt.md  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  test_nonblocking.py  todo  workflow_engine.py  yolov8-to-onnx.py
.claude/skills/pynode-workflows/: SKILL.md
.github/workflows/: ci.yml  publish.yaml
docs/: CREATING_NODES.md  CUSTOM_NODES.md  DOCKER.md  EXTENSIBILITY.md  UI_COMPONENTS.md
examples/: README.md  camera_workflow.py  camera_yolo_workflow.py
nodes/: __init__.py  base_node.py  camera_node.py  change_node.py  debug_node.py  delay_node.py  function_node.py  gate_node.py  inject_node.py  mqtt_in_node.py  mqtt_out_node.py  switch_node.py  template_node.py
nodes/AutoSyncNode/: auto_sync_node.py
nodes/BBoxMetricsNode/: __init__.py  bbox_metrics_node.py
nodes/BatchNode/: batch_node.py
nodes/CameraNode/: __init__.py  camera_node.py
nodes/ChangeNode/: __init__.py  change_node.py
nodes/ConfidenceFilterNode/: __init__.py  confidence_filter_node.py
nodes/CounterNode/: __init__.py  counter_node.py
nodes/CropNode/: __init__.py  crop_node.py
nodes/DebugNode/: __init__.py  debug_node.py
nodes/DelayNode/: delay_node.py
nodes/ErrorNode/: error_node.py
nodes/FileSystemNode/: filesystem_node.py
nodes/FilterNode/: filter_node.py
nodes/FrameSourceNode/: __init__.py  frame_source_node.py
nodes/FunctionNode/: function_node.py
nodes/GateNode/: gate_node.py
nodes/ImageFormatNode/: __init__.py  image_format_node.py
nodes/ImageViewerNode/: image_viewer_node.py
nodes/InferenceNode/: inference_node.py
nodes/InferenceNode/InferenceEngine/: __init__.py  result_converters.py
nodes/InjectNode/: inject_node.py
nodes/JoinNode/: join_node.py
nodes/LabelFilterNode/: __init__.py  label_filter_node.py
nodes/MQTTNode/: mqtt_in_node.py  mqtt_out_node.py
nodes/MqttInNode/: mqtt_in_node.py
nodes/MqttOutNode/: mqtt_out_node.py
nodes/OpenCV/: __init__.py  bitwise_node.py  blend_node.py  blob_detector_node.py  blur_node.py  color_space_node.py  colormap_node.py  contours_node.py  draw_node.py  edge_detector_node.py  equirectangular_node.py  histogram_node.py  hough_circles_node.py  hough_lines_node.py  in_range_node.py  morphology_node.py  paste_node.py  perspective_node.py  realsense_depth_node.py  resize_node.py  rotate_node.py  template_match_node.py  threshold_node.py
nodes/PointInShapeNode/: point_in_shape_node.py
nodes/PolygonMetricsNode/: polygon_metrics_node.py
nodes/RangeNode/: __init__.py  range_node.py
nodes/RateProbeNode/: __init__.py  rate_probe_node.py
nodes/SliceNode/: README.md  __init__.py  merge_predictions_node.py  slice_collector_node.py  slice_image_node.py
nodes/SplitNode/: split_node.py
nodes/SwitchNode/: switch_node.py
nodes/SyncNode/: sync_node.py
nodes/TemplateNode/: template_node.py
nodes/TrackerNode/: __init__.py  supervision_tracker_node.py  tracker_node.py
nodes/UltralyticsNode/: __init__.py  draw_predictions_node.py  ultralytics_node.py
nodes/mDNSNode/: mdns_broadcast_node.py
pynode/: __init__.py  __main__.py  _perf.py  config.py  install_nodes.py  main.py  node_registry.py  server.py  workflow_engine.py  workflow_manager.py
pynode/api/: __init__.py  helpers.py  nodes.py  services.py  sse.py  uploads.py  workflows.py
pynode/nodes/: __init__.py  base_node.py  image_utils.py  info.py  messages.py
pynode/nodes/AutoSyncNode/: auto_sync_node.py
pynode/nodes/BBoxMetricsNode/: bbox_metrics_node.py
pynode/nodes/BatchNode/: __init__.py  batch_node.py
pynode/nodes/CameraNode/: camera_node.py
pynode/nodes/ChangeNode/: change_node.py
pynode/nodes/ConfidenceFilterNode/: confidence_filter_node.py
pynode/nodes/ControlSliderNode/: control_slider_node.py
pynode/nodes/CounterNode/: counter_node.py
pynode/nodes/CropNode/: __init__.py  crop_node.py
pynode/nodes/DebugNode/: debug_node.py
pynode/nodes/DelayNode/: delay_node.py
pynode/nodes/DrawPredictionsNode/: __init__.py  draw_predictions_node.py
pynode/nodes/ErrorNode/: error_node.py
pynode/nodes/FileSystemNode/: __init__.py  filesystem_node.py
pynode/nodes/FilterNode/: __init__.py  filter_node.py
pynode/nodes/FrameSourceNode/: frame_source_node.py  requirements.txt
pynode/nodes/FunctionNode/: __init__.py  function_node.py
pynode/nodes/GateNode/: gate_node.py
pynode/nodes/GetiUploadNode/: __init__.py  geti_upload_node.py  requirements.txt
pynode/nodes/ImageFormatNode/: image_format_node.py
pynode/nodes/ImageUploadNode/: image_upload_node.py
pynode/nodes/ImageViewerNode/: __init__.py  image_viewer_node.py
pynode/nodes/ImageWriterNode/: __init__.py  (+1 more)
pynode/static/: index.html  style.css
readmes/: ARCHITECTURE_UI_COMPONENTS.md  CUSTOM_NODES.md  EXTENSIBILITY.md  UI_COMPONENTS.md
static/: app.js  index.html  style.css
static/js/: clipboard.js  config.js  connections.js  debug.js  events.js  history.js  main.js  nodes.js  palette.js  properties.js  selection.js  state.js  ui-utils.js  workflow.js
tests/: conftest.py  test_api_auth.py  test_api_errors.py  test_api_nodes.py  test_api_security.py  test_api_workflows.py  test_base_node_messaging.py  test_camera_node_backend.py  test_concurrency.py  test_config.py  test_control_slider_node.py  test_counter_sse.py  test_crop_node.py  test_debug_workflow_scope.py  test_delay_rate_limit.py  test_device_detection.py  test_function_node.py  test_image_upload_node.py  test_link_nodes.py  test_message_reader_pickle.py  test_models_dir.py  test_mqtt_services.py  test_node_registration.py  test_node_types_api.py  test_nodered_bridge.py  test_persistence.py  test_range_node.py  test_send_copy_semantics.py  test_serialization.py  test_socket_nodes.py  test_video_reader_node.py  test_workflow_engine.py  test_workflow_roundtrip.py
(+162 files in other folders)
