[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pynode-flow"
dynamic = ["version"]
description = "Python based Node-RED-like visual workflow system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "olkham" },
]
keywords = [
    "node-red",
    "workflow",
    "visual-programming",
    "flask",
    "computer-vision",
    "yolo",
    "no-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "waitress>=2.1",
    "numpy",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/olkham/pynode"
Repository = "https://github.com/olkham/pynode"
Issues = "https://github.com/olkham/pynode/issues"

[project.scripts]
pynode = "pynode.main:main"
pynode-install-nodes = "pynode.install_nodes:main"

[project.optional-dependencies]
# Heavy ML vision stack (UltralyticsNode, TrackerNode, DrawPredictionsNode, ...)
vision = [
    "ultralytics",
    "torch",
    "torchvision",
    "supervision",
]
# MQTTNode
mqtt = [
    "paho-mqtt",
]
# FrameSourceNode (multi-backend camera / stream source)
camera = [
    "framesource[full]",
]
# InferenceNode extra backends (ONNX + Intel Geti); torch/ultralytics via [vision]
inference = [
    "pynode-flow[vision]",
    "onnxruntime",
    "geti-sdk>=2.0.0",
]
# Qwen3VLMNode / vision-language models
vlm = [
    "pynode-flow[vision]",
    "transformers>=4.50.0",
    "qwen-vl-utils>=0.0.8",
    "Pillow>=9.0.0",
]
# Dataset upload nodes (RoboflowUploadNode, GetiUploadNode)
upload = [
    "roboflow>=1.0.0",
    "geti-sdk>=2.0.0",
]
# mDNSNode service discovery
discovery = [
    "zeroconf>=0.38.0",
]
# Everything that is PyPI-installable. Excludes proprietary camera SDKs such as
# the Omron/Sentech `stapipy` (OmronCameraNode), which must be installed
# manually from the vendor. Use: pip install "pynode-flow[full]"
full = [
    "pynode-flow[vision]",
    "pynode-flow[mqtt]",
    "pynode-flow[camera]",
    "pynode-flow[inference]",
    "pynode-flow[vlm]",
    "pynode-flow[upload]",
    "pynode-flow[discovery]",
]
# Backwards-compatible alias for [full]
all = [
    "pynode-flow[full]",
]
dev = [
    "opencv-stubs",
    "types-flask",
    "pytest",
]

[tool.pyright]
# Type checking configuration
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = "none"  # Suppress OpenCV attribute warnings
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

# Python version
pythonVersion = "3.11"
pythonPlatform = "Windows"

# Include/exclude paths
include = ["pynode"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "_backup",
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long

[tool.black]
line-length = 120
target-version = ["py311"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pynode*"]

[tool.setuptools.package-data]
pynode = ["static/**/*", "nodes/**/*"]

[tool.setuptools_scm]
# Version is derived from the latest `vX.Y.Z` git tag and written here at build
# time. Without a tag setuptools_scm produces a dev version, which PyPI rejects
# -- tag a release commit (e.g. `git tag v0.2.0`) before publishing.
version_file = "pynode/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
